# Speech2Insight-AI

./: .dockerignore  .env.example  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: __init__.py  config.py  logger.py  preprocess.py  sentiment.py  summarization.py  topic_modeling.py  transcribe.py
tests/: __init__.py  conftest.py  test_preprocess.py  test_sentiment.py  test_summarization.py  test_topic_modeling.py  test_transcribe.py
