# Project config — used by Ruff and future tooling
[project]
name = "speech2insight-ai"
version = "0.1.0"
description = "speech2insight-AI — Speech to insights with Streamlit"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [".git", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402"]
# E402: module import not at top (app.py sets path before src imports)
# N806: allow X for matrix in topic_modeling
[tool.ruff.lint.per-file-ignores]
"app.py" = ["E402"]
"src/topic_modeling.py" = ["N806"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "pylint>=3.0", "mypy>=1.0", "pre-commit>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
filterwarnings = ["ignore:.*"]

[tool.coverage.run]
source = ["src", "app.py"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]
fail_under = 60

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
no_strict_optional = true
warn_unused_configs = true
files = ["src/"]
